backend/crates/golish/tests/ai_events_characterization/snapshots/ai_events_characterization__plan_and_tool_source__plan_updated_with_explanation_serialization.snap
---
source: crates/golish/tests/ai_events_characterization/plan_and_tool_source.rs
assertion_line: 43
expression: json
---
{
  "explanation": "Updated plan based on code analysis results",
  "steps": [
    {
      "id": "step-1",
      "status": "completed",
      "step": "Analyze the codebase"
    },
    {
      "id": "step-2",
      "status": "in_progress",
      "step": "Implement the feature"
    },
    {
      "id": "step-3",
      "status": "pending",
      "step": "Write tests"
    },
    {
      "id": "step-4",
      "status": "pending",
      "step": "Update documentation"
    }
  ],
  "summary": {
    "completed": 1,
    "in_progress": 1,
    "pending": 2,
    "total": 4
  },
  "type": "plan_updated",
  "version": 2
}
