backend/crates/golish/tests/ai_events_characterization/snapshots/ai_events_characterization__plan_and_tool_source__plan_updated_without_explanation_serialization.snap
---
source: crates/golish/tests/ai_events_characterization/plan_and_tool_source.rs
assertion_line: 74
expression: json
---
{
  "explanation": null,
  "steps": [
    {
      "id": "step-a",
      "status": "pending",
      "step": "Research the problem"
    },
    {
      "id": "step-b",
      "status": "pending",
      "step": "Implement solution"
    }
  ],
  "summary": {
    "completed": 0,
    "in_progress": 0,
    "pending": 2,
    "total": 2
  },
  "type": "plan_updated",
  "version": 1
}
