backend/crates/golish/tests/ai_events_characterization/snapshots/ai_events_characterization__plan_and_tool_source__tool_source_sub_agent_serialization.snap
---
source: crates/golish/tests/ai_events_characterization/plan_and_tool_source.rs
assertion_line: 97
expression: json
---
{
  "agent_id": "agent-001",
  "agent_name": "analyzer",
  "type": "sub_agent"
}
