backend/crates/golish/tests/ai_events_characterization/snapshots/ai_events_characterization__plan_and_tool_source__tool_source_workflow_with_step_serialization.snap
---
source: crates/golish/tests/ai_events_characterization/plan_and_tool_source.rs
assertion_line: 110
expression: json
---
{
  "step_index": 0,
  "step_name": "analyze",
  "type": "workflow",
  "workflow_id": "wf-001",
  "workflow_name": "git_commit"
}
